move drop-shadow fix from template to module (also fixes cropping issue on home-v2 template)

--- a/version_control/Codurance_September2020/css/modules/recent-posts-v2.css
+++ b/version_control/Codurance_September2020/css/modules/recent-posts-v2.css
@@ -37,7 +37,9 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  padding-bottom: 1em;
+  padding-inline: 2rem;
+  margin-inline: -2rem;
+  padding-bottom: 0.5rem;
   overflow: scroll;
   scroll-snap-type: x mandatory;
   scrollbar-width: none;
