--- a/version_control/Codurance_September2020/css/templates/insights-overview.css
+++ b/version_control/Codurance_September2020/css/templates/insights-overview.css
@@ -65,10 +65,10 @@
 }
    
 .recent-blog-posts .cm-recent-post .cm-recent-post__group {
-    padding-bottom: 0.5rem;
+    /*padding-bottom: 0.5rem;*/
     transform: translateY(-1rem);
-    padding-inline: 2rem;
-    margin-inline: -2rem;
+    /*padding-inline: 2rem;
+    margin-inline: -2rem;*/
 }
 
 .recent-blog-posts .cm-recent-post .cm-recent-post__item:first-child {
